Ran make_clean_notebooks.ipynb to update clean notebooks

--- a/workshop_clean_nb/dada_tutorial_clean.ipynb
+++ b/workshop_clean_nb/dada_tutorial_clean.ipynb
@@ -393,9 +393,10 @@
     "\n",
     "Appropriately formatted training fastas for the RDP training set 14, the GreenGenes 13.8 release clustered at 97% identity, and the Silva reference database are [available for download here](https://www.dropbox.com/sh/mfcivbudmc21cqt/AAB1l-AUM5uKvjrR33ct-cTXa?dl=0). Download the rdp\\_train\\_set\\_14.fa.gz file, and place it in the directory with the fastq files.\n",
     "\n",
-    "Before we can run the assignment, we need to [run this notebook](download_taxonomy.ipynb) to download the taxonomy data.\n",
+    "> ## Download 16s rRNA Reference\n",
+    "> Before we can run the assignment, we need to [run this notebook](download_taxonomy.ipynb) to download the taxonomy data.\n",
     "\n",
-    "**Assign taxonomy:**"
+    "## Assign taxonomy"
    ]
   },
   {
@@ -408,8 +409,10 @@
    },
    "outputs": [],
    "source": [
-    "taxa <- assignTaxonomy(seqtab.nochim, paste0(path, \"rdp_train_set_14.fa.gz\"))\n",
-    "colnames(taxa) <- c(\"Kingdom\", \"Phylum\", \"Class\", \"Order\", \"Family\", \"Genus\")\n",
+    "taxa <- assignTaxonomy(seqtab.nochim, \n",
+    "                       paste0(path, \"rdp_train_set_14.fa.gz\"))\n",
+    "colnames(taxa) <- c(\"Kingdom\", \"Phylum\", \"Class\", \n",
+    "                    \"Order\", \"Family\", \"Genus\")\n",
     "unname(head(taxa))"
    ]
   },
@@ -437,12 +440,16 @@
    },
    "outputs": [],
    "source": [
-    "unqs.mock <- getUniques(removeBimeraDenovo(mergers[[\"Mock\"]], verbose=TRUE))\n",
-    "cat(\"DADA2 inferred\", length(unqs.mock), \"sample sequences present in the Mock community.\\n\")\n",
+    "unqs.mock <- getUniques(removeBimeraDenovo(mergers[[\"Mock\"]], \n",
+    "                                           verbose=TRUE))\n",
+    "cat(\"DADA2 inferred\", length(unqs.mock), \n",
+    "    \"sample sequences present in the Mock community.\\n\")\n",
     "\n",
     "mockRef <- readFasta(paste0(path, \"HMP_MOCK.v35.fasta\"))\n",
-    "match.ref <- sum(sapply(names(unqs.mock), function(x) any(grepl(x, as.character(sread(mockRef))))))\n",
-    "cat(\"Of those,\", sum(match.ref), \"were exact matches to the expected reference sequences.\\n\")"
+    "match.ref <- sum(sapply(names(unqs.mock), \n",
+    "                        function(x) any(grepl(x, as.character(sread(mockRef))))))\n",
+    "cat(\"Of those,\", sum(match.ref), \n",
+    "    \"were exact matches to the expected reference sequences.\\n\")"
    ]
   },
   {
@@ -514,7 +521,9 @@
    },
    "outputs": [],
    "source": [
-    "plot_richness(ps, x=\"Day\", measures=c(\"Shannon\", \"Simpson\"), color=\"When\") + theme_bw()"
+    "plot_richness(ps, x=\"Day\", \n",
+    "              measures=c(\"Shannon\", \"Simpson\"), \n",
+    "              color=\"When\") + theme_bw()"
    ]
   },
   {
@@ -537,8 +546,10 @@
    },
    "outputs": [],
    "source": [
-    "ord.nmds.bray <- ordinate(ps, method=\"NMDS\", distance=\"bray\")\n",
-    "plot_ordination(ps, ord.nmds.bray, color=\"When\", title=\"Bray NMDS\")"
+    "ord.nmds.bray <- ordinate(ps, method=\"NMDS\", \n",
+    "                          distance=\"bray\")\n",
+    "plot_ordination(ps, ord.nmds.bray, \n",
+    "                color=\"When\", title=\"Bray NMDS\")"
    ]
   },
   {
