Added overview slides

--- a/README.org
+++ b/README.org
@@ -5,8 +5,9 @@
   3. [[workshop_nb/start_jupyter.org][Start Jupyter]]
   4. [[workshop_nb/vm_pause.org][Pause Your VM]]
 * Resources
-Here is a list of resources relevant to this workshop, for future reference.
-** This Workshop
+Here is a list of resources relevant to this workshop.
+** Materials From This Workshop
+   - [[microbiome_analysis_overview.pdf][Metagenomics Overview Slides]]
    - [[https://github.com/granek/microbiome_workshop][GitHub Repository]]
    - [[https://hub.docker.com/r/granek/jupyter-microbiome/][Docker Image]]
 ** Microbiome Resources
